add media query in quelque élément

--- a/starter/assets/css/css.css
+++ b/starter/assets/css/css.css
@@ -8,5 +8,19 @@ body {
     margin: 0;
     padding: 0;
 }
-
+.displayFlex{
+    display: flex;
+}
+@media only screen and (max-width: 950px) {
+    .display{
+        display: block;
+    }
+    .marginTop{
+        margin-top: 100px;
+    }
+    .gapPlayer{
+        width: 80px;
+        height: 130px;
+    }
+  }
 
